Add cors & add tags endpoint
