# docs/swagger.json
@@ -164,6 +164,38 @@
                     }
                 }
             }
+        },
+        "/tag": {
+            "get": {
+                "description": "Get all tags at the moment",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tag"
+                ],
+                "summary": "Get all tags",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.TagResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": ""
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -237,6 +269,14 @@
                     "type": "string"
                 },
                 "sender": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.TagResponse": {
+            "type": "object",
+            "properties": {
+                "title": {
                     "type": "string"
                 }
             }
